# generics

./: LICENSE.md  README.md  pyproject.toml
ci/: build-gcloud-poetry.yml  build-gcloud.yml  build-hashicorp-poetry.yml  build-poetry.yml  pipeline.yml
docker/: gcloud-poetry.dockerfile  gcloud.dockerfile  hashicorp-poetry.dockerfile  nginx-cache.dockerfile  poetry.dockerfile
generics/: cli.py  flush_namespace.py
generics/communicator/: README.md  __init__.py  api.py  db.py
generics/communicator/static/: communicator.css  communicator.js
generics/nginx_cache/: cache.conf  tester.py
