[tool.poetry]
name = "generics"
version = "0.1.0"
description = ""
authors = ["Adi Wabisabi <adi.wabisabi@redis.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cache-tester = "generics.nginx_cache.tester:main"

[tool.poetry.dependencies]
python = "^3.8"
redis = ">=3.5.3"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
